--- a/README.mdx
+++ b/README.mdx
@@ -1,5 +1,7 @@
 # Abinand P
 
+Eagerly learning about technologies 🪄
+
 ## About Myself 
  <p className="font-medium text-justify  ">
                 🌟 Hi, I'm Abinand P, aspiring computer science engineering
