📃docs: Modified the Readme to have a selected view section.

--- a/README.mdx
+++ b/README.mdx
@@ -41,17 +41,26 @@ Eagerly learning about technologies 🪄
                 fast adapting nature and improving and detailing in each and
                 every detail as it delivers the end proudct the user obtains.
               </p>
-
-# LeetCode 
+<details>
+<summary>
+<h1>LeetCode Stats  🧑‍💻</h1></summary>
 
 ![LeetCode Stats](https://leetcard.jacoblin.cool/Abinand0911?theme=dark&font=Hanuman&ext=contest)
+</details>
 
-## My Account 
+
+<details> <summary><h1>GitHub Stats 📈</h1></summary> 
+
+
 ![abiji-2020's Stats](https://github-readme-stats.vercel.app/api?username=abiji-2020&theme=radical&show_icons=true&hide_border=false&count_private=true) <br/>
 ![abiji-2020's Streak](https://github-readme-streak-stats.herokuapp.com/?user=abiji-2020&theme=radical&hide_border=false)
 
-## Activity graph 
+## Activity graph 📊
 [![Abinand's github activity graph](https://github-readme-activity-graph.vercel.app/graph?username=Abiji-2020)](https://github.com/Abiji-2020/github-readme-activity-graph)
-## Using Languages
+
+
+## Using Languages 📜
 ![abiji-2020's Top Languages](https://github-readme-stats.vercel.app/api/top-langs/?username=abiji-2020&theme=radical&show_icons=true&hide_border=false&layout=compact)
+
+</details>
 
